Did a decent amount of work. Updated the router and stuff to make it actually load new pages. Made the navbar able to do this. Changed some parts of the header color cool RGB thing to get rid of the gap on the top but there is still a gap on the left I can not get rid of. Maybe left sided padding? Added a basic resume reader that is good for now. Might want to look into a better one later although it seems like this might be the best way. Also made the navbar ease into the color change when hovered over. I think it looks rather nice. Craig make sure to "npm install react-router-dom" to make the navigation work

--- a/src/assets/components/Header.css
+++ b/src/assets/components/Header.css
@@ -1,7 +1,11 @@
-
+body {
+  margin-top: 0;
+  padding-top: 0;
+}
 #header {
   height: 50px;
-  width: 110%;
+  width: 100%;
+  margin-left: 0;
   background: linear-gradient(-45deg, #0618a1, #085ca16c, #32a3d0, #3edce5);
   background-size: 400% 400%;
   animation: gradientMove 8s ease infinite;
@@ -10,7 +14,6 @@
   justify-content: center;
   color: white;
   font-size: 1.5rem;
-  border-radius: 12px;
 }
 
 @keyframes gradientMove {
