--- a/src/assets/components/NavBar.css
+++ b/src/assets/components/NavBar.css
@@ -6,4 +6,12 @@
     background-color: #333;
     color: #fff;
 }
+.nav-link {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.5s ease;
+}
 
+.nav-link:hover {
+    color: #32a3d0;
+}
